# emballoc

./: Cargo.toml  LICENSE-APACHE  README.md
.circleci/: README.md  config.yml  coverage.Dockerfile  miri.Dockerfile
benches/: allocation.rs
src/: lib.rs
src/raw_allocator/: buffer.rs  entry.rs  mod.rs
tests/: allocation.rs  api.rs  sections.rs
