[package]
name = "emballoc"
description = "Embedded allocator for `#![no_std]`"
version = "0.1.0"
edition = "2021"
categories = ["memory-management", "allocator", "no-std", "embedded"]
keywords = ["allocator", "embedded", "no-std", "no_std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/jfrimmel/emballoc"
rust-version = "1.62"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies.spin]
version = "0.9.4"
default-features = false
features = ["mutex", "spin_mutex"]
